maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:28: error: Unmatched closing brace '}' ignored here
}
^